// Copyright 2023 The Trusted Computations Platform Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package counter;

message CounterRequest {
  uint64 id = 1;
  string name = 2;
  oneof op {
    CounterCompareAndSwapRequest compare_and_swap = 3;
  }
}

message CounterCompareAndSwapRequest {
  int64 expected_value = 1;
  int64 new_value = 2;
}

message CounterResponse {
  uint64 id = 1;
  CounterStatus status = 2;
  oneof op {
    CounterCompareAndSwapResponse compare_and_swap = 3;
  }
}

enum CounterStatus {
  UNSPECIFIED = 0;
  SUCCESS = 1;
  NOT_LEADER_ERROR = 2;
  INVALID_ARGUMENT_ERROR = 3;
}

message CounterCompareAndSwapResponse {
  int64 old_value = 1;
  int64 new_value = 2;
}

message CounterConfig {
  map<string, int64> initial_values = 1;
}

message CounterSnapshot {
  map<string, int64> values = 1;
}
